======== IMPORTANT: rename this, and add a new "Future" section, BEFORE ========
======== making a new DFHack release, even if the only changes made     ========
======== were in submodules with their own changelogs!                  ========
================================================================================

# Future

## New Tools

## New Features

## Fixes

## Misc Improvements

## Documentation

## API

## Lua

## Removed

# 52.01-r1

## New Tools

## New Features
- `tweak`: ``animaltrap-reuse``: make it so built animal traps automatically unload the vermin they catch into stockpiled animal traps, so that they can be automatically re-baited and reused

## Fixes

## Misc Improvements

## Documentation

## API

## Lua

## Removed

# 51.13-r1

## New Features

- Compatibility with DF 51.13

# 51.12-r1.1

## New Features

- Compatibility with Itch release of DF 51.12

# 51.12-r1

## Fixes
- `getplants`: will no longer crash when faced with plants with growths that do not drop seeds when processed
- `getplants`: use updated formula for calculating whether plant growths are ripe
- `getplants`: fix logic for determining whether plant growths have been picked
- `gui/teleport`: adapt to new behavior in DF 51.11 to avoid a crash when teleporting items into mid-air
- `script-manager`: fix lua scripts in mods not being reloaded properly upon entering a saved world on Windows
- `preserve-rooms`: don't warn when a room is assigned to a non-existent unit.  this is now common behavior for DF when it keeps a room for an unloaded unit
- fixed an overly restrictive type constraint that resulted in some object types being glossed as a boolean when passed as an argument from C++ to Lua
- `plants`: will no longer generate a traceback when a filter is used
- `createitem`: multiple items should be properly created in stacks again

## Misc Improvements